# rm_xz_vision26

./: README.md
assets/: yolov8.xml
configs/: how_to_set_params.yaml
function/auto_aim/yolos/: CMakeLists.txt  DetectionResult.hpp  HikDriver.hpp  YOLODetector.cpp  YOLODetector.hpp  test.cpp
tools/: logger.hpp
